myproject/force-app/main/default/objects/Task__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>