myproject/force-app/main/default/objects/Task__c/fields/participant_Email__c.field-meta.xml
<CustomField>
    <fullName>participant_Email__c</fullName>
    <label>participant Email</label>
    <type>Email</type>
</CustomField>