myproject/force-app/main/default/objects/Task__c/recordTypes/Agile_Task.recordType-meta.xml
<RecordType>
    <fullName>Agile_Task</fullName>
    <active>true</active>
    <label>Agile Task</label>
</RecordType>