myproject/force-app/main/default/objects/Task__c/validationRules/start.validationRule-meta.xml
<ValidationRule>
    <fullName>start</fullName>
    <active>true</active>
    <description>start &lt; proj start</description>
    <errorConditionFormula>Start_Date__c &lt; Project__r.Start_Date__c</errorConditionFormula>
    <errorMessage>task start date cant be sooner than project start date</errorMessage>
</ValidationRule>