myproject/force-app/main/default/objects/Task__c/validationRules/start_vs_end.validationRule-meta.xml
<ValidationRule>
    <fullName>start_vs_end</fullName>
    <active>true</active>
    <description>task due date cant be greater than start date</description>
    <errorConditionFormula>Start_Date__c  &gt;  End_Date__c</errorConditionFormula>
    <errorMessage>Start date cant be later than end date</errorMessage>
</ValidationRule>