myproject/force-app/main/default/objects/Task__c/validationRules/task_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>task_end_date</fullName>
    <active>true</active>
    <description>task end date cant be greater than project end date</description>
    <errorConditionFormula>End_Date__c &gt;  Project__r.End_Date__c</errorConditionFormula>
    <errorMessage>Task end date is greater than project end date</errorMessage>
</ValidationRule>