myproject/force-app/main/default/objects/Task__c/validationRules/Task_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Task_start_date</fullName>
    <active>true</active>
    <description>start date cant be later than project due date</description>
    <errorConditionFormula>Start_Date__c  &gt;  Project__r.End_Date__c</errorConditionFormula>
    <errorMessage>The task start date cant be greater than project end date</errorMessage>
</ValidationRule>